# sql_format

./: .gitignore  README.md  pyproject.toml
sql_format/: main.py
tests/: test_sql_format.py
